--- a/site.yaml
+++ b/site.yaml
@@ -15,6 +15,8 @@ plugins:
     - hyde.ext.plugins.sorter.SorterPlugin
     - hyde.ext.plugins.grouper.GrouperPlugin
     - hyde.ext.plugins.tagger.TaggerPlugin
+    - hyde.ext.plugins.urls.UrlCleanerPlugin
+
 context:
     data:
         author:
@@ -106,4 +108,11 @@ markdown:
         - tables
         - headerid
         - codehilite
+
+urlcleaner:
+    index_file_names:
+        - index.html
+    strip_extensions:
+        - html
+    append_slash: true
 
