Remove more leftover files from starting template. Add custom plugin code.  Still not working correctly; trailing slashes got added to pages, but hyde server cannot find those pages.

--- a/site.yaml
+++ b/site.yaml
@@ -13,7 +13,7 @@ plugins:
     - hyde.ext.plugins.auto_extend.AutoExtendPlugin
     - hyde.ext.plugins.sorter.SorterPlugin
     - hyde.ext.plugins.tagger.TaggerPlugin
-    - hyde.ext.plugins.urls.UrlCleanerPlugin
+    - plugins.UrlCleanerPlugin
 
 context:
     data:
