Add Google Analytics tracking number

--- a/site.yaml
+++ b/site.yaml
@@ -41,7 +41,7 @@ meta:
     # a great way of simply adding or modifying properties of a very large
     # number of files.
     nodemeta: meta.yaml
-    ga_tracking_code: XX-XXXXXXXX-X
+    ga_tracking_code: UA-15134040-1
     author: Dan Carroll
 
 sorter:
