Add index.xml to index_file_names setting to properly generate full urls

--- a/site.yaml
+++ b/site.yaml
@@ -72,6 +72,7 @@ markdown:
 urlcleaner:
     index_file_names:
         - index.html
+        - index.xml
     strip_extensions:
         - html
         - xml
