--- a/site.yaml
+++ b/site.yaml
@@ -46,6 +46,7 @@ meta:
     nodemeta: meta.yaml
     ga_tracking_code: UA-15134040-1
     author: Dan Carroll
+    disqus_shortname: dancarroll
 
 sorter:
     name: # the name of the sorter (no pun intended)
