Remove unneeded character

--- a/content/Web.config
+++ b/content/Web.config
@@ -7,7 +7,7 @@
                 <rule name="Canonical Hostname">
                     <match url="(.*)" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
-                        <add input="{HTTP_HOST}" pattern="^dancarroll\.org$" negate="true" />
+                        <add input="{HTTP_HOST}" pattern="^dancarroll.org$" negate="true" />
                     </conditions>
                     <action type="Redirect" url="http://dancarroll.org/{R:1}" redirectType="Permanent" />
                 </rule>
