Add rewrite urls for direct requests for default documents

--- a/content/Web.config
+++ b/content/Web.config
@@ -14,7 +14,15 @@
                 <rule name="Convert to lower case" stopProcessing="true">  
                     <match url=".*[A-Z].*" ignoreCase="false" />  
                     <action type="Redirect" url="{ToLower:{R:0}}" redirectType="Permanent" />  
-                </rule>
+	    	</rule>
+		<rule name="Default document - html" stopProcessing="true">
+			<match url="(.*)index.html" />
+			<action type="Redirect" url="{R:1}" redirectType="Permanent" />
+		</rule>
+		<rule name="Default document - xml" stopProcessing="true">
+			<match url="(.*)index.xml" />
+			<action type="Redirect" url="{R:1}" redirectType="Permanent" />
+		</rule>
             </rules>
         </rewrite>
     </system.webServer>
