--- a/content/Web.config
+++ b/content/Web.config
@@ -4,12 +4,12 @@
     <system.webServer>
         <rewrite>
             <rules>
-                <rule name="Canonical Hostname">
+                <rule name="Canonical Hostname" stopProcessing="false">
                     <match url="(.*)" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
-                        <add input="{HTTP_HOST}" pattern="^dancarroll.org$" negate="true" />
+                        <add input="{HTTP_HOST}" pattern="^(www\.)(.*)$" />
                     </conditions>
-                    <action type="Redirect" url="http://dancarroll.org/{R:1}" redirectType="Permanent" />
+		    <action type="Redirect" url="http://{C:2}{REQUEST_URI}" redirectType="Permanent" />
                 </rule>
                 <rule name="Convert to lower case" stopProcessing="true">  
                     <match url=".*[A-Z].*" ignoreCase="false" />  
