--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,16 @@
-Fabric==1.5.3
-Jinja2==2.6
-Markdown==2.2.1
+Fabric==1.9.0
+Jinja2==2.7.1
+Markdown==2.3.1
+MarkupSafe==0.18
 PyYAML==3.10
 Pygments==1.6
 argparse==1.2.1
-commando==0.3.1a
-distribute==0.6.14
--e git://github.com/hyde/hyde@e1cdd457f9aaaa56af98849a4848b014eef5680c#egg=hyde-dev
-paramiko==1.10.0
-pycrypto==2.6
-smartypants==1.6.0.3
--e git://github.com/hyde/typogrify@b83867fe26dca76e0db6833b1cc2271228e62548#egg=typogrify_hyde-dev
+commando==0.3.4
+ecdsa==0.11
+fswrap==0.1.2
+hyde==0.8.8
+paramiko==1.14.0
+pycrypto==2.6.1
+smartypants==1.7.1
+typogrify==2.0.0
 wsgiref==0.1.2
