--- a/app.yaml
+++ b/app.yaml
@@ -4,6 +4,15 @@ runtime: python27
 api_version: 1
 threadsafe: true
 
+skip_files:
+- ^(.*/)?#.*#$
+- ^(.*/)?.*~$
+- ^(.*/)?.*\.py[co]$
+- ^(.*/)?.*/RCS/.*$
+- ^(.*/)?\..*$
+- ^(content/.*)
+- ^(layout/.*)
+
 default_expiration: "30d"
 
 handlers:
